Fixed header size and spacing

--- a/style.css
+++ b/style.css
@@ -15,11 +15,19 @@ body {
 header {
     background-color: #FFDBAA;
     padding: 20px;
+    display: flex;
 }
 
 header h1 {
     color: #553100;
     margin: 0;
+    font-size: 300%;
+    width: 50%;
+}
+
+nav button {
+    width: 100px;
+    margin: 15px;
 }
 
 .horizontal-layout {
@@ -30,6 +38,7 @@ header h1 {
 button {
     background-color: #805215;
     color: white;
+    height: 60px;
 }
 
 .inner-box {
@@ -45,5 +54,4 @@ button {
 
 .inner-box button {
     width: 100%;
-    height: 60px;
 }
